[gd_scene load_steps=10 format=3 uid="uid://2ryyyn4wkb6j"]

[ext_resource type="Script" path="res://Script/FrogEater.gd" id="1_h61ae"]
[ext_resource type="Texture2D" uid="uid://0ex0csjqp7sg" path="res://Art Assets/Pot large 2.png" id="2_kw00t"]
[ext_resource type="Script" path="res://Script/Components/PotComponent2.gd" id="3_sonsm"]
[ext_resource type="Script" path="res://Script/pot_small.gd" id="4_mxkxd"]
[ext_resource type="AudioStream" uid="uid://dgd0rgpn2o3yr" path="res://Audio/MovePot.mp3" id="5_u25pn"]
[ext_resource type="AudioStream" uid="uid://8ehp5703vham" path="res://Audio/PlacePot.mp3" id="6_js81f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7q78"]
size = Vector2(214, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrhk3"]
size = Vector2(23, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_mdtho"]

[node name="Pot_big" type="Node2D"]
script = ExtResource("1_h61ae")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(2, -6)
texture = ExtResource("2_kw00t")

[node name="Area2D" type="Area2D" parent="." groups=["pots"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -7)
shape = SubResource("RectangleShape2D_l7q78")

[node name="SeedArea2D" type="Area2D" parent="." groups=["pot", "pot_large"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SeedArea2D"]
position = Vector2(2, -7)
shape = SubResource("RectangleShape2D_l7q78")

[node name="PlatformPlacerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformPlacerArea2D"]
position = Vector2(1.5, 33)
shape = SubResource("RectangleShape2D_wrhk3")

[node name="PotComponent" type="Node2D" parent="."]
script = ExtResource("3_sonsm")

[node name="HoldComponent" type="Node2D" parent="."]
script = ExtResource("4_mxkxd")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_u25pn")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_js81f")

[node name="SpawnArea2D" type="Area2D" parent="." groups=["spawned"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea2D"]
shape = SubResource("CircleShape2D_mdtho")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D" to="HoldComponent" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="Area2D" to="HoldComponent" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="HoldComponent" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="SeedArea2D" to="HoldComponent" method="_on_seed_area_2d_area_entered"]
[connection signal="area_exited" from="SeedArea2D" to="HoldComponent" method="_on_seed_area_2d_area_exited"]
[connection signal="area_entered" from="PlatformPlacerArea2D" to="HoldComponent" method="_on_platform_placer_area_2d_area_entered"]
[connection signal="area_exited" from="PlatformPlacerArea2D" to="HoldComponent" method="_on_platform_placer_area_2d_area_exited"]
[connection signal="pot_type" from="PotComponent" to="HoldComponent" method="_on_pot_component_pot_type"]
